# index-renamer

./: .gitignore  README.md  index-renamer.py  setup.cfg  setup.py
index-renamer/: __main__.py
index-renamer/index_renamer.egg-info/: PKG-INFO  SOURCES.txt
