[metadata]
name = index-renamer
version = 0.0.2
author = William Wigemo
author_email = william.wigemo@outlook.com
description = Recursively rename files names "index" to its parents name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wille430/index-renamer
project_urls =
    Bug Tracker = https://github.com/wille430/index-renamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = index-renamer
packages = find:
python_requires = >=3.6

[options.packages.find]
where = index-renamer